--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,6 +19,7 @@ jobs:
           - board: galactic
           - board: cosmic
           - board: stellar
+          - board: i75
 
     runs-on: ubuntu-20.04
 
