--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -46,6 +46,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: raspberrypi/pico-sdk
+        ref: 1.5.1
         path: pico-sdk
         submodules: true
 
